--- a/mockup2/index.html
+++ b/mockup2/index.html
@@ -1,6 +1,9 @@
 <html>
     <head>
         <title>Mockup pixeles 2</title>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" type="text/css" href="estilo.css"/>
     </head>
     <body>
@@ -21,14 +24,19 @@
                 <h1>Formulario alta</h1>
                 <div>
                     <form>
-                        <label>Nombre:
-                        </label><input type="text" class="izq"><label>
-                        Dirigido a:</label><input type="text" ><label>
-                        Descripcion:</label><textarea></textarea><label>
-                        Fecha incio inscripcion:</label><input type="date"><label>
-                        Fecha fin inscripcion:</label><input type="date" class="izq"><label>
-                        Fecha inicio reto:</label><input type="date"><label>
-                        Fecha fin reto:</label><input type="date" class="izq"><input type="button"  class="cancelar"value="Cancelar"><input type="button" value="Aceptar"> 
+                        <label>Nombre:</label
+                        ><input type="text" class="izq"><label
+                        >Dirigido a:</label
+                        ><input type="text" ><label
+                        >Descripcion:</label
+                        ><textarea></textarea><label
+                        >Fecha incio inscripcion:</label
+                        ><input type="date"><label
+                        >Fecha fin inscripcion:</label
+                        ><input type="date" class="izq"><label
+                        >Fecha inicio reto:</label><input type="date"><label
+                        >Fecha fin reto:</label><input type="date" class="izq"
+                        ><input type="button"  class="cancelar"value="Cancelar"><input type="button" value="Aceptar"> 
                     </form>
                 </div>
             </div>
