--- a/mockup3/index.html
+++ b/mockup3/index.html
@@ -1,15 +1,22 @@
 <html>
     <head>
-        <title>Mockup %</title>
+        <title>Mockup Medias Query</title>
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" type="text/css" href="estilo.css"/>
     </head>
     <body>
-        <nav>
+        <nav id="nav1">
             <img src="imagenes/logo.png">
             <h1>Web Retos</h1>
+        </nav>
+        <nav id="nav2">
+            <ol>
+                <li class="resaltado">Lista de reto</li>
+                <li class="resaltado">Alta de reto</li>
+                <li class="resaltado">Lista de categoria</li>
+            </ol>
         </nav>
         <main>
             <aside>
